--- a/v/ve/veb/vebra.com.html
+++ b/v/ve/veb/vebra.com.html
@@ -1,46 +1,26 @@
-<!--The following is the downloaded HTML source of the vebra.com privacy policy that was archived on 2005-12-19.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20051219225131id_/http%3A//www.vebra.com/home/vebra/privacy.asp) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the vebra.com privacy policy that was archived on 2006-06-15.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20060615001257id_/http%3A//www.vebra.com/home/vebra/privacy.asp) for the most accurate reproduction.-->
 
 <html><head>
 <meta name="robots" content="noindex,nofollow">
-<title>Vebra.com plc - Privacy Policy</title><script language="JavaScript" type="text/javascript" src="http://www.vebra.com/home/js/vebranav.js"></script><link rel="stylesheet" href="http://www.vebra.com/home/css/vebra.css" type="text/css"><link rel="shortcut icon" href="/favicon.ico" type="image/x-icon"></head><body topmargin="0" leftmargin="0" marginheight="0" marginwidth="0" bgcolor="#FFFFFF" onload="preloadImages('http://www.vebra.com/home/images/newnav/btn-europrop-active.gif','http://www.vebra.com/home/images/newnav/btn-agents-active.gif','http://www.vebra.com/home/images/newnav/btn-myvebra-active.gif','http://www.vebra.com/home/images/newnav/btn-contact-active.gif','http://www.vebra.com/home/images/newnav/btn-companyinfo-active.gif');">
+<title>Vebra.com plc - Privacy Policy</title><script language="JavaScript" type="text/javascript" src="http://www.vebra.com/home/js/vebranav.js"></script><link rel="stylesheet" href="/home/css/vebra.css" type="text/css"><link rel="shortcut icon" href="/favicon.ico" type="image/x-icon"></head><body topmargin="0" leftmargin="0" marginheight="0" marginwidth="0" bgcolor="#FFFFFF" onload="preloadImages('http://www.vebra.com/home/images/newnav/btn-europrop-active.gif','http://www.vebra.com/home/images/newnav/btn-agents-active.gif','http://www.vebra.com/home/images/newnav/btn-myvebra-active.gif','http://www.vebra.com/home/images/newnav/btn-contact-active.gif','http://www.vebra.com/home/images/newnav/btn-companyinfo-active.gif');">
 
 <table width="100%" border="0" cellspacing="0" cellpadding="0" background="/home/images/newnav/topband_1px_back3.gif">
   <tbody><tr>
     <td align="center"> 
 <table border="0" cellspacing="0" cellpadding="0" width="770">
         <tbody><tr valign="middle"> 
-					<td colspan="2" valign="middle"><img src="/home/images/newnav/vebrabiglogo2.gif"><script language="JavaScript">
-<!-- Hide from old browsers
-now = new Date();
-random = now.getTime();
-
-// Modify to reflect site specifics
-site = "http://etype.adbureau.net";
-target = "/SITE=1UK.VEBRA/AREA=1N.HOME/PSUB=N/LOCATION=TOP/CHANNEL=SPORTS/AAMSZ=468x60";
-
-document.write('<IFRAME SRC="' + site + '/hserver/acc_random=' + random + target + '"');
-document.write(' NORESIZE SCROLLING=NO HSPACE=0 VSPACE=0 FRAMEBORDER=0 MARGINHEIGHT=0 MARGINWIDTH=0 WIDTH=468 HEIGHT=60>');
-
-document.write('<SCR');
-document.write('IPT SRC="' + site + '/jnserver/acc_random=' + random + target + '">');
-document.write('</SCR');
-document.write('IPT>');
-
-document.write('</IFRAME>');
-// End Hide -->
-</script><iframe src="http://etype.adbureau.net/hserver/acc_random=1580503635808/SITE=1UK.VEBRA/AREA=1N.HOME/PSUB=N/LOCATION=TOP/CHANNEL=SPORTS/AAMSZ=468x60" noresize="" scrolling="NO" hspace="0" vspace="0" frameborder="0" marginheight="0" marginwidth="0" width="468" height="60"><SCRIPT SRC="http://etype.adbureau.net/jnserver/acc_random=1580503635808/SITE=1UK.VEBRA/AREA=1N.HOME/PSUB=N/LOCATION=TOP/CHANNEL=SPORTS/AAMSZ=468x60"></SCRIPT></iframe><noscript>
-  <A HREF="http://etype.adbureau.net/accipiter/adclick/SITE=1UK.VEBRA/AREA=1N.HOME/PSUB=N/LOCATION=TOP/CHANNEL=SPORTS/AAMSZ=468x60">
-  <IMG SRC="http://etype.adbureau.net/accipiter/nserver/SITE=1UK.VEBRA/AREA=1N.HOME/PSUB=N/LOCATION=TOP/CHANNEL=SPORTS/AAMSZ=468x60">
-  </A>
-</noscript></td></tr>
+					<td colspan="2" valign="middle"><img src="/home/images/newnav/vebrabiglogo2.gif"><script language="JavaScript" type="text/javascript">
+ord=Math.random()*10000000000000000;
+document.write('<scr' + 'ipt language="JavaScript" src="http://ad.uk.doubleclick.net/adj/vebra.etype/other;tile=1;dcopt=ist;sz=468x60;ord=' + ord + '?" type="text/javascript"><\/scr' + 'ipt>');
+</script><script language="JavaScript" src="http://ad.uk.doubleclick.net/adj/vebra.etype/other;tile=1;dcopt=ist;sz=468x60;ord=6655396803692564?" type="text/javascript"></script><noscript><a href="http://ad.uk.doubleclick.net/jump/vebra.etype/other;tile=1;sz=468x60;ord=123456789?" target="_blank"><img src="http://ad.uk.doubleclick.net/ad/vebra.etype/other;tile=1;sz=468x60;ord=123456789?" width="468" height="60" border="0" alt=""></a></noscript></td></tr>
         <tr><td colspan="2"><img src="/home/images/newnav/spacer.gif" width="600" height="12"></td></tr>
         <tr>
-  	      <td><img src="http://www.vebra.com/home/images/newnav/spacer.gif" width="60" height="1"><a class="navbar" href="/index.asp?firmid=0&amp;branchid=1&amp;dbtype=1" onmouseover="swapImage('uk','','http://www.vebra.com/home/images/newnav/btn-ukprop-active.gif',1)" onmouseout="swapImgRestore()"><img src="http://www.vebra.com/home/images/newnav/btn-ukprop.gif" name="uk" border="0"></a><a class="navbar" href="/index.asp?firmid=0&amp;branchid=1&amp;dbtype=3" onmouseover="swapImage('euro','','http://www.vebra.com/home/images/newnav/btn-europrop-active.gif',1)" onmouseout="swapImgRestore()"><img src="http://www.vebra.com/home/images/newnav/btn-europrop.gif" border="0" name="euro"></a><a class="navbar" href="/home/vebra/searchagent.asp" onmouseover="swapImage('agents','','http://www.vebra.com/home/images/newnav/btn-agents-active.gif',1)" onmouseout="swapImgRestore()"><img src="http://www.vebra.com/home/images/newnav/btn-agents.gif" border="0" name="agents"></a><a class="navbar" href="/home/members" onmouseout="swapImgRestore()" onmouseover="swapImage('myvebra','','http://www.vebra.com/home/images/newnav/btn-myvebra-active.gif',1)"><img src="http://www.vebra.com/home/images/newnav/btn-myvebra.gif" border="0" name="myvebra"></a><a class="navbar" href="/home/vebra/contact.asp" onmouseout="swapImgRestore()" onmouseover="swapImage('contact','','http://www.vebra.com/home/images/newnav/btn-contact-active.gif',1)"><img src="http://www.vebra.com/home/images/newnav/btn-contact.gif" border="0" name="contact"></a><a class="navbar" href="/home/vebra/info.asp" onmouseout="swapImgRestore()" onmouseover="swapImage('company','','http://www.vebra.com/home/images/newnav/btn-companyinfo-active.gif',1)"><img src="http://www.vebra.com/home/images/newnav/btn-companyinfo.gif" border="0" name="company"></a></td>
-          <td align="right" valign="top"><a href="/index.asp"><img src="http://www.vebra.com/home/images/newnav/home2.gif" border="0"></a></td>
+  	      <td><img src="/home/images/newnav/spacer.gif" width="60" height="1"><a class="navbar" href="/index.asp?firmid=0&amp;branchid=1&amp;dbtype=1" onmouseover="swapImage('uk','','/home/images/newnav/btn-ukprop-active.gif',1)" onmouseout="swapImgRestore()"><img src="/home/images/newnav/btn-ukprop.gif" name="uk" border="0"></a><a class="navbar" href="/home/overseas.asp" onmouseover="swapImage('euro','','/home/images/newnav/btn-europrop-active.gif',1)" onmouseout="swapImgRestore()"><img src="/home/images/newnav/btn-europrop.gif" border="0" name="euro"></a><a class="navbar" href="/home/vebra/searchagent.asp" onmouseover="swapImage('agents','','/home/images/newnav/btn-agents-active.gif',1)" onmouseout="swapImgRestore()"><img src="/home/images/newnav/btn-agents.gif" border="0" name="agents"></a><a class="navbar" href="/home/members" onmouseout="swapImgRestore()" onmouseover="swapImage('myvebra','','/home/images/newnav/btn-myvebra-active.gif',1)"><img src="/home/images/newnav/btn-myvebra.gif" border="0" name="myvebra"></a><a class="navbar" href="/home/vebra/contact.asp" onmouseout="swapImgRestore()" onmouseover="swapImage('contact','','/home/images/newnav/btn-contact-active.gif',1)"><img src="/home/images/newnav/btn-contact.gif" border="0" name="contact"></a><a class="navbar" href="/home/vebra/info.asp" onmouseout="swapImgRestore()" onmouseover="swapImage('company','','/home/images/newnav/btn-companyinfo-active.gif',1)"><img src="/home/images/newnav/btn-companyinfo.gif" border="0" name="company"></a></td>
+          <td align="right" valign="top"><a href="/index.asp"><img src="/home/images/newnav/home2.gif" border="0"></a></td>
         </tr>
         <tr>
-          <td colspan="2"><img src="http://www.vebra.com/home/images/newnav/spacer.gif" width="60" height="18"></td>
+          <td colspan="2"><img src="/home/images/newnav/spacer.gif" width="60" height="18"></td>
         </tr>
       </tbody></table>
 </td></tr></tbody></table><center>
