--- a/e/e-/e-g/e-gulfbank.com.html
+++ b/e/e-/e-g/e-gulfbank.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the e-gulfbank.com privacy policy that was archived on 2005-12-12.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20051212105041id_/http%3A//e-gulfbank.com/a_details.asp%3FarticleID%3D27) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the e-gulfbank.com privacy policy that was archived on 2006-06-15.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20060615001303id_/http%3A//www.e-gulfbank.com/a_details.asp%3FarticleID%3D27) for the most accurate reproduction.-->
 
 <html><head><style>
 
@@ -276,10 +276,6 @@ function LaunchFCAT(App,Lang,ScreenSeq,Txn,Requestor)
 <tbody><tr>
 <td align="center">
 
-	<a href="/goto.asp?l=77&amp;u=http://www.e-gulfbank.com/a_details.asp?articleId=8&amp;page=22" onmouseover="window.status='http://www.e-gulfbank.com/a_details.asp?articleId=8&amp;page=22';return true" onmouseout="window.status=''">
-		
-	<img src="/banner/RedMini155x221Eng3.jpg" alt="Red Account Promo" border="0"></a>
-							
 
 </td>
 </tr></tbody></table>
