--- a/r/re/red/red-gate.com.html
+++ b/r/re/red/red-gate.com.html
@@ -1,7 +1,8 @@
-<!--The following is the downloaded HTML source of the red-gate.com privacy policy that was archived on 2005-12-15.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20051215070332id_/http%3A//www.red-gate.com/about/legal.htm) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the red-gate.com privacy policy that was archived on 2006-06-15.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20060615001318id_/http%3A//red-gate.com/about/legal.htm) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en"><!-- #BeginTemplate "/Templates/about.dwt" --><!-- DW6 --><head>
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 <!-- #BeginEditable "doctitle" -->
 <title>Legal information about Red Gate Software</title>
 <meta name="Description" content="Legal information including our privacy policy, data protection and use of information.">
@@ -10,10 +11,22 @@
 <meta name="author" content="Red Gate Software Ltd">
 <meta name="copyright" content="All material (c) Red Gate Software Ltd or its original authors unless otherwise stated">
 
-<meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1"><script src="../javascript.js" type="text/javascript"></script>
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8"><script src="../javascript.js" type="text/javascript"></script>
 
 <link rel="stylesheet" href="../stylesheet.css" type="text/css" media="all">
 <link rel="stylesheet" href="../print.css" type="text/css" media="print">
+<script src="http://www.google-analytics.com/urchin.js" type="text/javascript">
+
+</script>
+
+<script type="text/javascript">
+
+_uacct = "UA-90206-1";
+
+urchinTracker();
+
+</script>
+
 
 
 
@@ -21,7 +34,7 @@
 
 </head>
 
-<body class="about" onload="linkHighlight();"><div id="pageWrapper"><!-- #BeginLibraryItem "/Library/core_branding.lbi" -->	<div id="branding"><a href="../index.htm"><img src="../images/logo.gif" alt="Red Gate Software" width="200" height="64" border="0" id="logo" title="Link to homepage"></a>		<img src="../images/strapline2.gif" alt="Ingeniously simple tools" width="189" height="20" id="strapline"></div>
+<body class="about" onload="linkHighlight();"><div id="pageWrapper"><!-- #BeginLibraryItem "/Library/core_branding.lbi" -->	<div id="branding"><a href="../index.htm"><img src="../images/logo.gif" alt="Red Gate Software" width="200" height="64" border="0" id="logo" title="Link to homepage"></a>		<img src="../images/strapline2.gif" alt="Ingeniously simple tools" width="175" height="20" id="strapline"></div>
 <!-- #EndLibraryItem --><div id="bodyWrapper"> 
 	
   <div id="breadcrumb"> 
@@ -56,11 +69,11 @@
 					
   <li><a class="page" href="index.htm">About Red Gate</a></li>
 				</ul>
-				<h2>Current affairs </h2>
+				<h2>Current affairs</h2>
 				<ul class="submenu">
 					<li><a class="dir" href="news/index.htm">News</a></li>
 					<li><a class="page" href="roadmap.htm">Roadmap</a></li>
-					<li><a class="dir" href="jobs/index.htm">Jobs</a></li>
+					<li><a class="dir" href="jobs/index.htm">Careers</a></li>
 					<li><a class="page" href="events.htm">Events</a></li>
 		            <li><a class="page" href="newsletter.htm">Newsletter</a></li>
 				</ul>
@@ -95,13 +108,15 @@
     <li id="mm-support"><a class="mm" href="../support/index.htm">Support</a></li>
     <li id="mm-about"><a class="mm" href="index.htm">About Red Gate</a></li>
 		</ul>
-	</div><!-- #EndLibraryItem --><!-- #BeginLibraryItem "/Library/core_navExtra.lbi" --><div id="navExtra">
-	<p id="navAccount"><a href="http://www.red-gate.jp" target="_blank"><img src="../images/japan.gif" alt="www.red-gate.jp" border="0"></a>&nbsp;<a href="http://korea.red-gate.com" target="_blank"><img src="../images/korea.gif" alt="http://korea.red-gate.com" border="0"></a>&nbsp; | <a href="../dynamic/shoppingcart/viewshoppingcart.aspx">Shopping cart</a> | <a href="../dynamic/shoppingcart/UnsavedQuote.aspx">Quotes</a></p>
-	<form id="search" action="../Dynamic/Search/Find.aspx" method="post">
-		<label>Search:
-		<input type="text" name="strSearch" class="text" maxlength="255"></label>
-		<input type="image" src="../images/search-go.gif" alt="go" id="search-go">
-	</form>
+	</div><!-- #EndLibraryItem --><!-- #BeginLibraryItem "/Library/core_navExtra.lbi" -->	<div id="navExtra">
+  <p id="navAccount"><span id="lang"><img src="../images/web_16.gif" alt="" style="vertical-align: middle"> <a href="http://www.red-gate.jp" target="_blank" lang="ja" xml:lang="ja">日本語</a> | <a href="http://korea.red-gate.com" target="_blank" lang="ko" xml:lang="ko">한국어</a></span> | <a href="../dynamic/shoppingcart/viewshoppingcart.aspx">Shopping cart</a> | <a href="../dynamic/shoppingcart/UnsavedQuote.aspx">Quotes</a>
+  </p>
+<form id="search" action="../Dynamic/Search/Find.aspx" method="post">
+    <label>Search:
+      <input type="text" name="strSearch" class="text" maxlength="255">
+    </label>
+    <input name="image" type="image" id="search-go" src="../images/search-go.gif" alt="go">
+  </form>
 </div><!-- #EndLibraryItem --></div>
 <!-- Web design by Cayenne : www.cayenne.co.uk -->
 <!-- #EndTemplate --></body></html>
