--- a/p/pi/pic/picturesof.net.html
+++ b/p/pi/pic/picturesof.net.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the picturesof.net privacy policy that was archived on 2005-12-23.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20051223121726id_/http%3A//www.picturesof.net/privacy_policy.html) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the picturesof.net privacy policy that was archived on 2006-06-15.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20060615001558id_/http%3A//picturesof.net/privacy_policy.html) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.0 Transitional//EN"><html><head>
 <title>PicturesOf.net - Privacy Policy</title>
