--- a/k/ki/kin/kinja.com.html
+++ b/k/ki/kin/kinja.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the kinja.com privacy policy that was archived on 2005-12-24.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20051224183302id_/http%3A//kinja.com/info/privacy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the kinja.com privacy policy that was archived on 2006-06-15.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20060615001919id_/http%3A//kinja.com/info/privacy) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en"><head>
 	<title>Kinja, the weblog guide</title>
@@ -16,6 +16,8 @@
 	<script type="text/javascript" src="/js/scriptaculous/scriptaculous.js"></script>
 	<script type="text/javascript" src="/js/ajax.opt.js"></script>
 	<script type="text/javascript"><!--//--><![CDATA[//><!-- 
+		if (window.focus) window.focus();
+
 		var current_digest = "";
 		var user_viewing_their_digest = false;
 		var digest_owner = "";
