--- a/a/ai/air/airnav.com.html
+++ b/a/ai/air/airnav.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the airnav.com privacy policy that was archived on 2005-12-30.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20051230060534id_/http%3A//airnav.com/info/privacy.html) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the airnav.com privacy policy that was archived on 2006-06-15.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20060615002138id_/http%3A//www.airnav.com/info/privacy.html) for the most accurate reproduction.-->
 
 <html><!-- Copyright AirNav, LLC.  ALL RIGHTS RESERVED.  --><!-- DO NOT COPY THIS CODE WITHOUT PERMISSION.     --><!-- DO NOT MAKE DERIVATIVE WORKS.                 --><!-- If you are thinking of copying this code      --><!-- email contact@airnav.com for authorization.   --><head>
 <title>AirNav: Privacy Policy</title>
@@ -32,7 +32,8 @@
 <td><a href="/pilotshop"><img src="http://66.226.83.248/tabs/pilotshop.gif" width="99" height="23" alt="pilotshop" border="0"></a></td>
 
 </tr></tbody></table></td></tr>
-<tr><td width="20" bgcolor="#CCCCFF">&nbsp;</td><td width="100%" bgcolor="#CCCCFF" align="right">&nbsp;</td></tr>
+<tr><td width="20" bgcolor="#CCCCFF">&nbsp;</td><td width="100%" bgcolor="#CCCCFF" align="right">1124 users online
+&nbsp;</td></tr>
 </tbody></table>
 
 
