--- a/s/sh/sha/shalomautohits.com.html
+++ b/s/sh/sha/shalomautohits.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the shalomautohits.com privacy policy that was archived on 2005-12-14.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20051214083846id_/http%3A//www.shalomautohits.com/privacy.asp) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the shalomautohits.com privacy policy that was archived on 2006-06-15.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20060615004906id_/http%3A//shalomautohits.com/privacy.asp) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.0 Transitional//EN"><html><head>
 <meta http-equiv="Content-Type" content="text/html; charset=ISO-8859-1">
@@ -23,7 +23,7 @@
 </tbody></table>
 </center></td>
 </tr>
-<tr><td class="copyright" colspan="2">Copyright © 2001-2005 <a class="copyright" target="_blank" href="http://techhouse.dk/">TechHouse.dk</a> - licensed to ShalomAutoHits.com (RP Associates)</td></tr>
+<tr><td class="copyright" colspan="2">Copyright © 2001-2006 <a class="copyright" target="_blank" href="http://techhouse.dk/">TechHouse.dk</a> - licensed to ShalomAutoHits.com (RP Associates)</td></tr>
 </tbody></table>
 </center>
 
