--- a/o/on/onl/onlinenewspapers.com.html
+++ b/o/on/onl/onlinenewspapers.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the onlinenewspapers.com privacy policy that was archived on 2005-12-15.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20051215020530id_/http%3A//www.onlinenewspapers.com/privacy.htm) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the onlinenewspapers.com privacy policy that was archived on 2006-06-15.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20060615004943id_/http%3A//www.onlinenewspapers.com/privacy.htm) for the most accurate reproduction.-->
 
 <html><head>
 <base href="http://www.webwombat.com.au/">
@@ -185,89 +185,38 @@ google_color_text = "000000";
 </tr>
 </tbody></table>
 </center>
- 
-<table width="100%" border="0" cellspacing="0" cellpadding="10">
-  <tbody><tr> 
-    <td align="center"> 
-      <a href="http://www.onlinenewspapers.com/">Back to Main Index</a>
-    </td>
-  </tr>
-</tbody></table>
-<table width="100%" border="0" cellspacing="0" cellpadding="10">
-  <tbody><tr>
-    <td align="center"> 
-      <p>Please <a href="http://www.onlinenewspapers.com/emailform/Feedback.htm" target="(_new)">EMAIL US</a> if you know of any new online newspapers 
-        or those on our lists where the address has changed. </p>
-      </td>
-  </tr>
-</tbody></table>
-   
-<table width="350" border="0" cellspacing="0" cellpadding="0" align="center">
-  <form action="http://www.webwombat.com.au/aus"></form>
-    <tbody><tr> 
-      <td width="370" height="20"> <p><font color="Red">Search 
-        Australia with Web Wombat:</font></p></td>
-      <td width="50"></td>
-    </tr>
-    <tr> 
-      <td width="370"> 
-        <input type="text" name="i" style="WIDTH: 280px" size="34">
-      </td>
-      <td width="50" align="right"> 
-        <input type="submit" name="Submit" value="Search" class="sb-but">
-      </td>
-    </tr>
-    <tr> 
-      <td width="370" class="textSml" height="25" colspan="2"></td>
-    </tr>
-  
-    <tr>
-<td height="23" align="center" class="text-foot">
-<!--------- Sponsored Sites Start -------->
-<p>
-<table width="500" border="0">
-<tbody><tr>
-<td colspan="3" align="left" class="text-foot"><font color="Black" face="arial">Sponsor Sites:</font></td></tr>
-<tr>
-<td valign="top" width="33%">
-<a href="http://www.sydney.com.au/" title="For holidays, travel, tourism to Sydney Australia" target="_new">Sydney Online</a><br>
+
+<title></title>
+<table border="0" cellpadding="10" cellspacing="0" width="100%"> <tbody><tr><td align="center"> <a href="http://www.onlinenewspapers.com/">Back to Main Index</a>
+</td> </tr></tbody></table><table border="0" cellpadding="10" cellspacing="0" width="100%"><tbody><tr><td align="center"> <p>Please <a href="http://www.onlinenewspapers.com/emailform/Feedback.htm" target="(_new)">EMAIL US</a> if you know of any new
+online newspapers or those on our lists where the address has changed. </p>
+</td> </tr></tbody></table> <table align="center" border="0" cellpadding="0" cellspacing="0" width="350"> <form action="http://www.webwombat.com.au/aus"></form> <tbody><tr><td height="20" width="370"> <p><font color="Red">Search Australia with Web Wombat:</font></p></td>
+<td width="50"></td> </tr> <tr> <td width="370"> <input name="i" style="width: 280px;" size="34" type="text"> </td> <td align="right" width="50"> <input name="Submit" value="Search" class="sb-but" type="submit"> </td></tr><tr><td class="textSml" colspan="2" height="25" width="370"></td> </tr> <tr><td class="text-foot" align="center" height="23"><!--------- Sponsored Sites Start --------><p><table border="0" width="500"><tbody><tr><td colspan="3" class="text-foot" align="left"><font color="Black" face="arial">Sponsor
+Sites:</font></td></tr>
+<tr><td valign="top" width="33%"><a href="http://www.sydney.com.au/" title="For holidays, travel, tourism to Sydney Australia" target="_new">Sydney Online</a><br>
 <a href="http://www.melbourne.com.au/" title="For holidays, travel, tourism to Melbourne Australia" target="_new">Melbourne Online</a><br>
 <a href="http://www.brisbane.com.au/" title="For holidays, travel, tourism to Brisbane Australia" target="_new">Brisbane Online</a><br>
 <a href="http://www.wombattechnology.com.au/" title="enterprise search solutions for the corporate enterprise with robust security &amp; scalability" target="_new">Enterprise Search Solutions</a><br>
-<a href="http://www.onechoicephonecard.com/" title="Buy Quality and low rate International Phone Cards &amp; Calling Cards Online to call from USA to anywhere in the world." target="_new">Phone Cards &amp; Calling Cards</a>
-</td>
-<td valign="top" width="33%">
-<a href="http://www.adelaide.com.au/" title="For holidays, travel, tourism to Adelaide Australia" target="_new">Adelaide Online</a><br>
+<a href="http://www.drivenow.co.nz/" target="_blank" title="Car Hire New Zealand Save on New Zealand Car Rental and campervan Hire. Auckland, Wellington, Christchurch and all cities &amp; Airports.">Car
+Hire NZ</a><br>
+</td><td valign="top" width="33%"><a href="http://www.adelaide.com.au/" title="For holidays, travel, tourism to Adelaide Australia" target="_new">Adelaide Online</a><br>
 <a href="http://www.webwombat.com.au/motoring/index.htm" title="Car news, highlights, reviews &amp; information on cars in Australia" target="_new">Car News</a><br>
 <a href="http://www.sydney.com.au/hotels.htm" title="Booking a hotel, apartment, accommodation in Sydney Australia" target="_new">Hotels in Sydney</a><br>
-<a href="http://www.4print.com.au" target="_new">4Print</a><br>
-<a href="http://www.netstarter.com.au/" title="Web design sydney, website developers, commerce, online shops, hosting, offer, affordable" target="_new">Website Designers Sydney</a>
-</td><td valign="top" width="33%">
-<a href="http://www.edusearch.com.au/" title="Australian Education Information" target="_new">Australian Education</a><br>
-<a href="http://www.domainregistration.com.au/" title=".com.au Domain Names" target="_new">.com.au Domain Names</a><br>
-<a href="http://www.sydneyfestivals.com.au/" title="Sydney Festivals &amp; Events" target="_new">Sydney Festivals</a><br>
-<a href="http://www.sydney.com.au/boutique-hotels.htm" title="Sydney Boutique Hotels" target="_new">Sydney Boutique Hotels</a>
-</td></tr></tbody></table>
-<!--------- Sponsored Sites End -------->
-</p><p>
-</p></td>
-</tr>
-</tbody></table>
-<table width="100%" border="0" cellspacing="0" cellpadding="0" bgcolor="#000000">
-  <tbody><tr> 
-    <td align="center" height="19" class="text-foot"><a href="http://www.onlinenewspapers.com/" class="link-foot">Home</a> 
-      | <a href="http://www.onlinenewspapers.com/SiteMap/sitemapkey.htm" class="link-foot">Site Map</a> | <a href="http://www.onlinenewspapers.com/privacy.htm" class="link-foot">Privacy 
-      Policy</a> | <a href="http://www.onlinenewspapers.com/emailform/Feedback.htm" target="(_new)" class="link-foot">Add Newspaper</a> | <a href="mailto:?subject=Onlinenewspapers&amp;body=Found%20this%20site%20and%20thought%20you%20might%20find%20it%20interesting.%20Just%20click%20on%20the%20following%20link%20to%20check%20it%20out%20http://www.onlinenewspapers.com/" class="link-foot">Tell a Friend About Us</a> | <a href="http://www.onlinenewspapers.com/linkcode.htm" class="link-foot">Link to Us</a></td>
-  </tr>
-</tbody></table>
-<table width="100%" border="0" cellspacing="0" cellpadding="0" bgcolor="#0B3D91">
-  <tbody><tr> 
-    <td height="23" align="center" class="text-foot">Copyright ©1995-2005 <a href="http://www.webwombat.com.au/" class="link-foot2" title="Australian Search Engine &amp; Portal">Web Wombat Pty Ltd</a>. All rights reserved.
-</td>
-  </tr>
-</tbody></table>
-<!-- #exec cgi="counter_no_result" -->
-<font size="4"><b><font face="Arial, Helvetica, sans-serif"> 
-<!-- #nofooter -->
-</font></b></font> 
-</body></html>
+<a href="http://www.4print.com.au" target="_new">4Print</a><br><a href="http://www.carhirenow.co.uk/" title="Car Hire UK Discover discounted UK and Ireland Car Hire. From Heathrow Airport to Aberdeen, great car rental deals from the UK's leading Car hire suppliers.">Car
+Hire UK</a><br>
+</td><td valign="top" width="33%"><a href="http://www.edusearch.com.au/" title="Australian Education Information" target="_new">Australian
+Education</a><br>
+<a href="http://www.domainregistration.com.au/" title=".com.au Domain Names" target="_new">.com.au
+Domain Names</a><br>
+<a href="http://www.sydneyfestivals.com.au/" title="Sydney Festivals &amp; Events" target="_new">Sydney
+Festivals</a><br>
+<a href="http://www.sydney.com.au/boutique-hotels.htm" title="Sydney Boutique Hotels" target="_new">Sydney
+Boutique Hotels</a><br><a href="http://www.drivenow.com.au/" target="_blank" title="Car Hire Australia Discount Australia Car Hire and Campervan Rental. Brisbane, Sydney, Melbourne and all cities &amp; Airports.">Car
+Hire Australia</a>
+</td></tr></tbody></table><!--------- Sponsored Sites End --------></p><p></p></td></tr></tbody></table><table bgcolor="#000000" border="0" cellpadding="0" cellspacing="0" width="100%"> <tbody><tr><td class="text-foot" align="center" height="19"><a href="http://www.onlinenewspapers.com/" class="link-foot">Home</a>
+| <a href="http://www.onlinenewspapers.com/SiteMap/sitemapkey.htm" class="link-foot">Site Map</a> | <a href="http://www.onlinenewspapers.com/privacy.htm" class="link-foot">Privacy Policy</a> | <a href="http://www.onlinenewspapers.com/emailform/Feedback.htm" target="(_new)" class="link-foot">Add Newspaper</a>
+| <a href="mailto:?subject=Onlinenewspapers&amp;body=Found%20this%20site%20and%20thought%20you%20might%20find%20it%20interesting.%20Just%20click%20on%20the%20following%20link%20to%20check%20it%20out%20http://www.onlinenewspapers.com/" class="link-foot">Tell a Friend About Us</a> | <a href="http://www.onlinenewspapers.com/linkcode.htm" class="link-foot">Link to Us</a></td> </tr>
+</tbody></table><table bgcolor="#0b3d91" border="0" cellpadding="0" cellspacing="0" width="100%"> <tbody><tr> <td class="text-foot" align="center" height="23">Copyright
+©1995-2006 <a href="http://www.webwombat.com.au/" class="link-foot2" title="Australian Search Engine &amp; Portal">Web
+Wombat Pty Ltd</a>. All rights reserved.
+</td> </tr></tbody></table><!-- #exec cgi="counter_no_result" --><font size="4"><b><font face="Arial, Helvetica, sans-serif"><!-- #nofooter --></font></b></font></body></html>
