--- a/z/za/zaz/zazzle.com.html
+++ b/z/za/zaz/zazzle.com.html
@@ -1,9 +1,9 @@
-<!--The following is the downloaded HTML source of the zazzle.com privacy policy that was archived on 2005-12-17.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20051217041804id_/http%3A//www.zazzle.com/policy/privacy_policy.asp) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the zazzle.com privacy policy that was archived on 2006-06-15.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20060615005011id_/http%3A//www.zazzle.com/policy/privacy_policy.asp) for the most accurate reproduction.-->
 
 <html><head>
 	<title>Zazzle.com</title>
-	<meta http-equiv="Content-Type" content="text/html; charset=ISO-8859-1">
+	<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 	<link rel="STYLESHEET" href="http://www.zazzle.com/css/default.css" type="text/css">
 <script language="JavaScript" type="text/javascript" src="/include/js/main3_stamps.js"></script><script language="JavaScript" type="text/javascript" src="/include/js/header3_stamps.js"></script></head>
 
@@ -11,13 +11,13 @@
 
 <body topmargin="0" leftmargin="0" rightmargin="0" marginwidth="0" marginheight="0" bgcolor="#FFFFFF" text="#000000" link="#3333CC" alink="#FF9933" vlink="#3333CC">
 <center>
-<table width="100%" height="53" border="0" cellspacing="0" cellpadding="0" background="http://img.zazzle.com/www/graphics/header/bg.gif">
+<table width="100%" height="53" border="0" cellspacing="0" cellpadding="0" background="http://img.zazzle.com/www/graphics/header/bg_v2.gif">
 <tbody><tr>
 <td align="CENTER">
 <table width="800" height="53" border="0" cellspacing="0" cellpadding="0">
 	<tbody><tr>
 		<td rowspan="2" width="193" height="53">
-			<a href="http://www.zazzle.com/welcome/home/default.asp"><img src="http://img.zazzle.com/www/graphics/header/logo.gif" width="193" height="53" border="0"></a><br>
+			<a href="http://www.zazzle.com/welcome/home/default.asp"><img src="http://img.zazzle.com/www/graphics/header/logo_v2.gif" width="193" height="53" border="0"></a><br>
 		</td>
 		<td colspan="7" height="28" align="RIGHT">
 			<font face="Arial, Helvetica, Verdana" size="-1" color="#3333CC" style="FONT-SIZE: 13px;">
@@ -32,22 +32,22 @@ document.writeln(GenerateConsoleLinks('http://www.zazzle.com/', 'https://www.zaz
 	</tr>
 	<tr>
 		<td width="80" height="25" valign="BOTTOM">
-			<a href="http://www.zazzle.com/welcome/home/default.asp"><img src="http://img.zazzle.com/www/graphics/header/welcome_off.gif" width="80" height="23" border="0"></a><br>
+			<a href="http://www.zazzle.com/welcome/home/default.asp"><img src="http://img.zazzle.com/www/graphics/header/tabs/welcome_off.gif" width="80" height="23" border="0"></a><br>
 		</td>
 		<td width="77" height="25" valign="BOTTOM">
-			<a href="http://www.zazzle.com/products/default.asp"><img src="http://img.zazzle.com/www/graphics/header/products_off.gif" width="77" height="23" border="0"></a><br>
+			<a href="http://www.zazzle.com/products/default.asp"><img src="http://img.zazzle.com/www/graphics/header/tabs/products_off.gif" width="77" height="23" border="0"></a><br>
 		</td>
 		<td width="93" height="25" valign="BOTTOM">
-			<a href="http://www.zazzle.com/contributors/default.asp"><img src="http://img.zazzle.com/www/graphics/header/contributors_off.gif" width="93" height="23" border="0"></a><br>
+			<a href="http://www.zazzle.com/contributors/default.asp"><img src="http://img.zazzle.com/www/graphics/header/tabs/contributors_off.gif" width="93" height="23" border="0"></a><br>
 		</td>
 		<td width="136" height="25" valign="BOTTOM">
-			<a href="http://www.zazzle.com/collections/default.asp"><img src="http://img.zazzle.com/www/graphics/header/special_off.gif" width="136" height="23" border="0"></a><br>
+			<a href="http://www.zazzle.com/collections/default.asp"><img src="http://img.zazzle.com/www/graphics/header/tabs/special_off.gif" width="136" height="23" border="0"></a><br>
 		</td>
 		<td width="121" height="25" valign="BOTTOM">
-			<a href="http://www.zazzle.com/create/default.asp"><img src="http://img.zazzle.com/www/graphics/header/create_off.gif" width="121" height="23" border="0"></a><br>
+			<a href="http://www.zazzle.com/create/default.asp"><img src="http://img.zazzle.com/www/graphics/header/tabs/create_off.gif" width="121" height="23" border="0"></a><br>
 		</td>
 		<td width="79" height="25" valign="BOTTOM">
-			<a href="http://www.zazzle.com/myzazzle/default.asp"><img src="http://img.zazzle.com/www/graphics/header/myzazzle_off.gif" width="79" height="23" border="0"></a><br>
+			<a href="http://www.zazzle.com/myzazzle/default.asp"><img src="http://img.zazzle.com/www/graphics/header/tabs/myzazzle_off.gif" width="79" height="23" border="0"></a><br>
 		</td>
 		<td height="25" valign="BOTTOM">
 			<img src="http://img.zazzle.com/www/graphics/1x1spacer.gif" width="1" height="1"><br>
@@ -129,7 +129,7 @@ document.writeln(GenerateConsoleLinks('http://www.zazzle.com/', 'https://www.zaz
 			<a href="http://www.zazzle.com/welcome/first/safetyguarantee.asp" class="footer">Safe Shopping Guarantee</a>&nbsp;|
 			<a href="http://www.zazzle.com/welcome/first/shippingreturns.asp" class="footer">Shipping &amp; Returns</a>&nbsp;|
 			<a href="http://www.zazzle.com/welcome/first/aboutus.asp" class="footer">About Us</a>&nbsp;|
-			<a href="http://www.zazzle.com/welcome/first/testimonials.asp" class="footer">Testimonials</a><br>
+			<a href="http://www.zazzle.com/welcome/sitemap" class="footer">Sitemap</a><br>
 			</font>
 		</td>
 	</tr>
@@ -145,12 +145,13 @@ document.writeln(GenerateConsoleLinks('http://www.zazzle.com/', 'https://www.zaz
 	<tr>
 		<td align="CENTER">
 			<font face="Verdana, Helvetica, Arial" size="-2" color="#666666">
-			Copyright © 2000-2005, Zazzle.com, Inc. All rights reserved.<br>
+			Copyright © 2000-2006, Zazzle.com, Inc. All rights reserved.<br>
 			</font>
 		</td>
 	</tr>
 </tbody></table>
 <br>
+
 <!-- Overture -->
 <script language="JavaScript">
 <!-- Overture Services, Inc
@@ -226,7 +227,6 @@ hbx.pec="";
 <script language="javascript1.1" src="/include/js/hbx_custom.js"></script>
 <script language="javascript1.1" defer="" src="/include/js/hbx2.js"></script>
 <!--END WEBSIDESTORY CODE-->
-
 
 </center>
 
